docs: receiver README 수정